<resources>
    <string name="app_name">Acquisti</string>
    <string name="email">fcalemard@gmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>

    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="msgquit">Voulez vous quitter Acquisti</string>
    <string name="msgajoutart">Voulez vous ajouter tout les articles à la liste</string>
    <string name="msginitliste">Voulez vous quitter ré-Initialiser les Listes</string>
    <string name="msginitbd">Voulez vous quitter ré-Initialiser les données</string>
    <string name="msglistesinitialisees">Les listes ont été ré-initialisée(s)</string>
    <string name="msggestart">Gestion des articles</string>
    <string name="msggestfam">Gestion des familles</string>
    <string name="msggestlistes">Gestion des listes</string>

    <string name="title_activity_articles">Articles</string>
    <string name="title_activity_familles">Familles</string>
    <string name="title_activity_initbd">initbd</string>
    <string name="libelle_activity_initbd">Initialiser base de données</string>
    <string name="libelle_activity_articles">Gestion des articles</string>
    <string name="libelle_activity_familles">Gestion des familles</string>
    <string name="msgsaisiefam">Saisissez une famille</string>
    <string name="msgsaisieliste">Saisissez une liste</string>
    <string name="libelle_activity_initlistes">Initialiser Listes</string>
    <string name="msg_courses_terminees">Vos courses sont terminées</string>


    <string name="lib_toutesoptions">Activer toutes les options</string>
    <string name="lib_destoutesoptions">Desactiver toutes les options</string>
    <string name="lib_gestfamprod">Gestion des familles de produits</string>
    <string name="lib_saismanuelle">Saisie manuelle</string>
    <string name="lib_saismanuelle_nonaccess">Saisie manuelle non configurée</string>
    <string name="lib_saismanprod">Saisie manuelle des articles</string>
    <string name="lib_saismanprod_nonaccess">Saisie manuelle articles non configurée</string>
    <string name="lib_saismanfam">Saisie manuelle des familles</string>
    <string name="lib_saismanfam_nonaccess">Saisie manuelle familles non configurée</string>
    <string name="lib_recovocale">Reconnaissance vocale</string>
    <string name="lib_gestdetprod">Saisie détaillée des articles</string>
    <string name="lib_gestdetprodpuht">Saisie du Prix Unitaire Ht</string>
    <string name="lib_gestdetprodputtc">Saisie du Prix Unitaire TTC</string>
    <string name="lib_gestdetprodtva">Saisie Taux TVA</string>
    <string name="lib_gestdetprodqte">Saisie Quantité</string>

    <string name="lib_qte">Quantité</string>
    <string name="lib_puht">Saisie du Prix Unitaire Ht</string>
    <string name="lib_tva">Tva</string>
    <string name="lib_puttc">Prix Unitaire TTC</string>
    <string name="title_activity_listes">Listes</string>
    .
</resources>
