<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ouccelo.com.acquisti.ParametresActivity">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_menu_revert"
        app:backgroundTint="@android:color/holo_orange_light"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginEnd="29dp"
        android:onClick="close"
        android:nestedScrollingEnabled="true"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/enreg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@drawable/accept2"
        app:backgroundTint="@android:color/holo_orange_light"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:onClick="enreg"
        android:nestedScrollingEnabled="true"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/fab"
        android:baselineAligned="false"
        android:weightSum="1">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_recovocale"
            android:id="@+id/optrecovocale"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestfamprod"
            android:id="@+id/optfamprod"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_saismanuelle"
            android:id="@+id/optsaisiemanuelle"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_saismanprod"
            android:id="@+id/optsaismanart"
            android:layout_gravity="right"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_saismanfam"
            android:id="@+id/optsaismanfam"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestdetprod"
            android:id="@+id/optgestdetprod"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestdetprodqte"
            android:id="@+id/optsaisqte"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestdetprodpuht"
            android:id="@+id/optsaispuht"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestdetprodtva"
            android:id="@+id/optsaistva"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_gestdetprodputtc"
            android:id="@+id/optsaisputtc"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_toutesoptions"
            android:id="@+id/optactivertoutes"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:layout_weight="0.21"
            android:onClick="activeroptions" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lib_destoutesoptions"
            android:id="@+id/optdesactivertoutes"
            android:foregroundTintMode="src_over"
            android:textColorHint="#325b29"
            android:enabled="true"
            android:focusableInTouchMode="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:layout_weight="0.21"
            android:nestedScrollingEnabled="false"
            android:onClick="activeroptions" />

    </LinearLayout>

</RelativeLayout>
